--- a/.css/styles.css
+++ b/.css/styles.css
@@ -4,7 +4,12 @@
     box-sizing: border-box;
 }
 
+@media screen and (max-width: 768px) {
+    body {
+      padding-bottom: 100px;
 
+    }
+}
 
 body {    
     display: flex;
@@ -13,7 +18,7 @@ body {
     background-color: #b8c6db;
     font-family: "Lucida Grande", sans-serif;
     color: #404040;
-    margin: 0;
+    margin: 0 auto;
     padding-bottom: 200px;
     flex-direction: column;
 }
@@ -25,7 +30,8 @@ body {
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.24);
     position: fixed;
     justify-content: center;
-    width: 550px;
+    width: 90%;
+    max-width: 550px;
     top: 0;
     border-radius: 0 0 20px 20px;
     z-index: 1;
@@ -37,15 +43,16 @@ body {
     background-color: #fff;
     border-radius: 20px;
     box-shadow: 0 0 10px 2px rgba(100, 100, 100, 0.5);
-    width: 500px;
-    margin: 20px;
+    width: 90%;
+    max-width: 500px;
+    margin: 20px auto;
     position:relative ;
     top: 90px;
 }
 
 .quiz-question {
     padding: 50px;
-    margin: 10px;
+    margin: 10px auto;
 }
 
 .question {
@@ -62,12 +69,14 @@ button {
     background-color: #55b50b;
     border: none;
     color: #fff;
-    display: block;
-    width: 100%;
+    display:block;
+    width: 90%;
+    max-width: 500px;
     cursor: pointer;
     font-size: medium;
     font-family: inherit;
     padding: 5px;
+    border-radius: 0 20px 20px 0;
 }
 
 button:hover {
@@ -82,7 +91,7 @@ button:focus {
 /* tags */
 
 .container-tags {
-    margin: 10px;
+    margin: 10px auto;
     padding: 20px;
 }
 
@@ -109,7 +118,8 @@ button:focus {
     background-color: #140523;
     color: #fff;
     position: fixed;
-    width: 550px;
+    width: 90%;
+    max-width: 550px;
     bottom: 0;
     border-radius: 20px 20px 0 0;
     z-index: 1;
@@ -117,10 +127,8 @@ button:focus {
 }
 
 .footer_navbar {
-    padding:0px;
     display:flex;
-    flex-wrap: wrap;
-    margin:20px;
+    margin: 10px auto;
     text-align: center;
     color: #fff;
     list-style-type: none;
@@ -132,7 +140,8 @@ button:focus {
 
 .footer_icons{
     margin: 0 60px 0 60px; 
-    width: 50px;
+    width: 90%;
+    max-width: 50px;
     
 }
 
@@ -141,7 +150,8 @@ button:focus {
 }
 
 .card-bookmark {
-    width: 50px;
+    width: 90%;
+    max-width: 50px;
     position: absolute;
     right: 10px;
     top: -10px;
