--- a/sources/styles/index-styles.css
+++ b/sources/styles/index-styles.css
@@ -4,6 +4,7 @@
 @import "/sources/styles/global-styles.css";
 
 /* Quiz */
+
 ul,
 ol {
   list-style: none;
@@ -78,6 +79,9 @@ ol li {
   box-shadow: 0px 5px 45px rgba(101, 245, 5, 0.997);
 }
 
+.card__answer-hidden {
+  transition: 0.5 ease-in-out;
+}
 
 /* BOOKMARK in CARD */
 
@@ -89,11 +93,11 @@ ol li {
     top: -10px;
 }
 
-.card__answer {
+.card__answer-hidden {
     text-align: center;
     margin: 0 2rem;
     font-style: italic;
-   /*  display: none; */
+    display: none;
 }
 
 /* TAGS */
