--- a/sources/styles/profile_styles.css
+++ b/sources/styles/profile_styles.css
@@ -71,8 +71,6 @@
   .counter-list {
   display: flex;
   justify-content: center;
-  gap: 2rem;
-  
   }
 
   .counter-list__item {
@@ -80,8 +78,8 @@
   align-items: center;
   justify-content: space-evenly;
   width: 80px;
-  margin: 20px;
-  padding: 0.5rem;
+  margin: 10px;
+  padding: .5rem;
   background-color: var(--basic-color);
   border: 1px solid rgba(109, 113, 110, 0.821);
   border-radius: 30px;
@@ -103,4 +101,6 @@
   color: var(--basic-color);
   box-shadow: 5px 15px 20px rgba(255, 255, 255, 0.1), 0px 10px 20px rgba(255, 255, 255, 0.1);
 }
+
+
  
